fix share this post alignment

--- a/_sass/partials/_single.sass
+++ b/_sass/partials/_single.sass
@@ -143,7 +143,8 @@ footer.single
         text-align: left
     .social
         text-align: center
-
+        p
+            text-align: center
     .social-icon
         margin: 20px 10px
         display: inline-block
